[tool.poetry]
name = "algolia-filters-parser"
version = "0.1.0"
description = "Parser and builder library for Algolia filters"
authors = ["Radu Baston <radubaston1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "algolia_filters_parser"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
black = "^24.3.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
